--- a/menu/index.html
+++ b/menu/index.html
@@ -185,19 +185,19 @@
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
                             <h3>Chili &emsp; 9,5</h3>    
-                            <p>carne e fagioli serviti con polenta</p>
+                            <p>carne e fagioli serviti con polenta <br>leggermente piccante</p>
                         </li>
                         <li>
                             <h3>Costine &emsp; 11,5</h3>    
-                            <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
+                            <p>costine di maiale al forno in salsa barbeque <br>servite con patate fritte</p>
                         </li>
                         <li>
                             <h3>Pollo alla Griglia &emsp; 12</h3>    
-                            <p>300 grammi di petto marinato servito con coleslaw 12</p>
+                            <p>300 grammi di petto marinato <br>servito con coleslaw</p>
                         </li>
                         <li>
                             <h3>Tagliata di Picanha &emsp; 19</h3>    
-                            <p>350 grammi di picanha di manzo servita su letto di rucola</p>
+                            <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
                         </li>
                         <li>
                             <h3>T-Bone Steak &emsp; 4 per etto</h3>    
@@ -213,7 +213,7 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Blondie &emsp; 5</h3>
-                                <p>brownie di cioccolato e nocciole servito con crema di mascarpone</p>
+                                <p>brownie di cioccolato e nocciole <br>servito con crema di mascarpone</p>
                             </li>
                             <li>
                                 <h3>Birramisù &emsp; 5</h3>
@@ -225,7 +225,7 @@
                             </li>
                             <li>
                                 <h3>Sacher &emsp; 5</h3>
-                                <p>torta di cioccolato con marmellata di albicocca, servita con panna montata</p>
+                                <p>torta di cioccolato con marmellata di albicocca <br>servita con panna montata</p>
                             </li>
                         </ul>
                         <p>Compleanni e ricorrenze: forniamo dolci e torte, se portate le vostre il servizio è di 2 € a persona. Accettiamo solo prodotti di pasticceria.<p><br>
