--- a/menu/index.html
+++ b/menu/index.html
@@ -228,7 +228,7 @@
                                 <p>torta di cioccolato con marmellata di albicocca <br>servita con panna montata</p>
                             </li>
                         </ul>
-                        <p>Compleanni e ricorrenze: forniamo dolci e torte, se portate le vostre il servizio è di 2 € a persona. Accettiamo solo prodotti di pasticceria.<p><br>
+                        <p>Compleanni e ricorrenze: forniamo dolci e torte, se portate le vostre il servizio è di 2 € a persona. <br>Accettiamo solo prodotti di pasticceria.<p><br>
                     </div>
                 </div>
             </div>
