--- a/asporto/index.html
+++ b/asporto/index.html
@@ -163,19 +163,23 @@
                 <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                     <li>
                         <h3>Chili &emsp; 9,5</h3>    
-                        <p>carne e fagioli serviti con polenta</p>
+                        <p>carne e fagioli serviti con polenta <br>leggermente piccante</p>
                     </li>
                     <li>
                         <h3>Costine &emsp; 11,5</h3>    
-                        <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
+                        <p>costine di maiale al forno in salsa barbeque <br>servite con patate fritte</p>
                     </li>
                     <li>
                         <h3>Pollo alla Griglia &emsp; 12</h3>    
-                        <p>300 grammi di petto marinato servito con coleslaw 12</p>
+                        <p>300 grammi di petto marinato <br>servito con coleslaw</p>
                     </li>
                     <li>
                         <h3>Tagliata di Picanha &emsp; 19</h3>    
-                        <p>350 grammi di picanha di manzo servita su letto di rucola</p>
+                        <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
+                    </li>
+                    <li>
+                        <h3>T-Bone Steak &emsp; 4 per etto</h3>    
+                        <p>fiorentina di manzo da 8 a 14 etti.<br>cottura: molto al sangue o al sangue</p>
                     </li>
                 </ul>                      
             </div>
