--- a/menu/index.html
+++ b/menu/index.html
@@ -158,7 +158,7 @@
                         </li>
                         <li>
                             <h3>Autunno &emsp; 8,9 / doppio 14,9</h3> 
-                            <p>180 grammi di manzo, composta di funghi, cipolla caramellata e panna</p>
+                            <p>180 grammi di manzo, composta di funghi, panna</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>    
@@ -174,7 +174,7 @@
                         </li>
                         <li>
                             <h3>Vegetariano &emsp; 8</h3>    
-                            <p>180 grammi di hamburger di quinoa, rucola, barbabietola rossa, salsa di senape e miele</p>
+                            <p>180 grammi di hamburger di quinoa, rucola, composta di barbabietola rossa, salsa di senape e miele</p>
                         </li>
                     </ul>                      
                 </div>   
