--- a/menu/index.html
+++ b/menu/index.html
@@ -244,36 +244,36 @@
                     <h2 class="subheader">Birre artigianali alla Spina <br><small>Otto spine che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Castelli Palmares &emsp;  4 &bull; 6</h3>
-                            <p>red ale 5,6%</p>
+                            <h3>Castelli Italicum &emsp;  4 &bull; 6</h3>
+                            <p>bionda fruttata 5%</p>
                         </li>
                         <li>
-                            <h3>Emiliano Tropicale &emsp;  4 &bull; 6</h3>
-                            <p>light IPA 4,7%</p>
+                            <h3>Emiliano Lambrumbrum &emsp;  4 &bull; 6</h3>
+                            <p>ale con mosto di lambrusco 5,2%</p>
+                        </li>
+                        <li>
+                            <h3>Emiliano Macario Gomez &emsp;  4 &bull; 6</h3>
+                            <p>doppia ipa amara 7,2%</p>
                         </li>
                         <li>
                             <h3>Gambrinus Helles &emsp;  4 &bull; 6</h3>
                             <p>hell 4,9%</p>
                         </li>
                         <li>
-                            <h3>MC 77 Bastogne &emsp;  4 &bull; 6</h3>
-                            <p>american pale ale 6,2%</p>
+                            <h3>MC77 Communication Breakdown &emsp;  4 &bull; 6</h3>
+                            <p>american pale ale 5,6%</p>
                         </li>
                         <li>
-                            <h3>MC77 Insomnia &emsp;  4 &bull; 6</h3>
-                            <p>ipa al caffè 7,5%</p>
+                            <h3>Mukkeller Mazzu de Fiori &emsp;  4 &bull; 6</h3>
+                            <p>ipa amara 6,1%</p>
                         </li>
                         <li>
-                            <h3>MC77 Sofronia &emsp;  4 &bull; 6</h3>
-                            <p>blanche con ibisco 5%</p>
+                            <h3>Mukkeller Marina &emsp;  4 &bull; 6</h3>
+                            <p>ambrata fruttata e amara 6,4%</p>
                         </li>
                         <li>
-                            <h3>Mukkeller Hattori Hanzo &emsp;  4 &bull; 6</h3>
-                            <p>doppia ipa 8,3%</p>
-                        </li>
-                        <li>
-                            <h3>Mukkeller PSE &emsp;  4 &bull; 6</h3>
-                            <p>golden ale 5,6%</p>
+                            <h3>Zotler Dunkel &emsp;  4 &bull; 6</h3>
+                            <p>rossa stile tedesco 5%</p>
                         </li>
                     </ul>
                 </div>
@@ -312,10 +312,6 @@
                     <div class="paragraph-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Manerba Fiordalisa 33cl &emsp; 5</h3>
-                                <p>5% blanche</p>
-                            </li>
-                            <li>
                                 <h3>MC-77 Sofronia 33cl &emsp; 6</h3>
                                 <p>5% blanche all’ibisco</p>
                             </li>
@@ -330,6 +326,9 @@
                             <li>
                                 <h3>Castelli Calix Niger 33cl &emsp; 6</h3>
                                 <p>7,2% stout</p>
+                            </li>
+                            <li><h3>Castelli Caput Mundi 75cl &emsp; 12</h3>
+                                <p>10% ale scura</p>
                             </li>
                         </ul>
                     </div>
@@ -399,11 +398,11 @@
                     <h2 class="subheader">Vino in Bottiglia</h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Libenter Rosso Piceno &emsp;13</h3>
+                            <h3>Libenter Rosso Piceno &emsp;14</h3>
                             <p>tavignano</p>
                         </li>
                         <li>
-                            <h3>Misco Verdicchio Jesi &emsp;13</h3>
+                            <h3>Misco Verdicchio Jesi &emsp;14</h3>
                             <p>tavignano</p>
                         </li>
                         <li>
