--- a/menu/index.html
+++ b/menu/index.html
@@ -260,7 +260,7 @@
                             <p>hell 4,9%</p>
                         </li>
                         <li>
-                            <h3>MC77 Communication Breakdown &emsp;  4 &bull; 6</h3>
+                            <h3>MC77 Communication &emsp;  4 &bull; 6</h3>
                             <p>american pale ale 5,6%</p>
                         </li>
                         <li>
