--- a/asporto/index.html
+++ b/asporto/index.html
@@ -166,7 +166,7 @@
                         <p>costine di maiale al forno in salsa barbeque <br>servite con patate fritte</p>
                     </li>
                     <li>
-                        <h3>Pollo alla Griglia &emsp; 12</h3>    
+                        <h3>Pollo Piccadilly &emsp; 12</h3>    
                         <p>300 grammi di petto marinato <br>servito con coleslaw</p>
                     </li>
                     <li>
