--- a/eventi/cena-san-martino.html
+++ b/eventi/cena-san-martino.html
@@ -93,8 +93,7 @@
                     <li>Tris di stuzzichini: polenta con spuma di baccalà, vellutata di castagne con funghi porcini e guanciale croccante, verze in padella</li>
                     <li>Hamburger di manzo con radicchio passato in padella, fonduta di formaggi e noci. Servito con dadolata di zucca e patate al forno</li>
                     <li>Dolce a scelta fra: Cheesecake, Sacher, Blondie, Birramisù</li>
-                    <li>Caffè</li>
-                    <li>Castagne</li>
+                    <li>Caffè e castagne</li>
                 </ul>
                 <hr>
             </div>   
