--- a/menu/index.html
+++ b/menu/index.html
@@ -103,7 +103,7 @@
                         </li>
                         <li>
                             <h3>Bocconcini di Pollo &emsp; 5</h3>    
-                            <p>petto di pollo di prima scelta impanato e fritto</p>
+                            <p>serviti con salsa piccante</p>
                         </li>
                         <li>
                             <h3>Nachos Supreme &emsp; 5</h3>    
