--- a/contatti/index.html
+++ b/contatti/index.html
@@ -303,7 +303,7 @@
                 <p>Tra nuvole e colline, per offrirti solo il meglio: Birre Artigianali strepitose, Cibo fantastico!</p>
                 <p>Ti conquisteremo con i nostri hamburger dalla qualità eccellente e dal sapore indimenticabile, con le sfiziose alette di pollo e le costine in salsa bbq.</p>
                 <p>Non ti basta tutto questo?</p>
-                <p>Serviamo anche ottimo vino &mdash;&#8201;una piccola selezione di eccellente qualità&#8201;&mdash;, dolci fatti in casa.</p>
+                <p>Serviamo anche ottimo vino,una piccola selezione di eccellente qualità, e dolci fatti in casa.</p>
             </div>
         </div>
     </div>
