--- a/eventi/cena-san-martino.html
+++ b/eventi/cena-san-martino.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Cena di San Martino 2016</title>
-    <meta name="description" content="11 Novembre 2016 ore 20:30. Cena di San Martino con menù a base di ccastagne, funghi e baccalà"/>
+    <meta name="description" content="11 Novembre 2016 dalle ore 20:30. Cena di San Martino con menù a base di castagne, funghi e baccalà"/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2016"/>
