--- a/eventi/cena-san-martino.html
+++ b/eventi/cena-san-martino.html
@@ -12,14 +12,14 @@
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Cena di San Martino"/>
-    <meta name="twitter:description" content="11 Novembre 2016 ore 20:30. Cena di San Martino con menù a base di castagne, funghi e baccalà"/>
+    <meta name="twitter:description" content="11 Novembre 2016 dalle ore 20:30. Cena di San Martino con menù a base di castagne, funghi e baccalà"/>
     <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/cena-san-martino-2016.jpg"/>
     <meta name="twitter:url" content="http://www.beerstrot.it/eventi/cena-san-martino.html"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it/eventi/cena-san-martino.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Cena di San Martino 2016"/>
-    <meta property="og:description" content="11 Novembre ore 20:00. Cena di San Martino con menù a base di castagne, funghi e baccalà"/>
+    <meta property="og:description" content="11 Novembre dalle ore 20:00. Cena di San Martino con menù a base di castagne, funghi e baccalà"/>
     <meta property="og:image" content="http://www.beerstrot.it/asset/img/large/cena-san-martino-2016.jpg"/>
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1920">
