--- a/asporto/index.html
+++ b/asporto/index.html
@@ -116,7 +116,7 @@
                 <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                     <li>
                         <h3>Beerstrot 180 / 360 &emsp; 10,5 / 14,5</h3>    
-                        <p>360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
+                        <p>180 / 360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
                     </li>
                     <li>
                         <h3>New York &emsp; 8,9 / doppio 14,9</h3>    
