--- a/eventi/cena-san-martino.html
+++ b/eventi/cena-san-martino.html
@@ -60,7 +60,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://www.beerstrot.it/asset/img/large/cena-san-martino-2016.jpg" alt="Cena di San Martino Alberi e Foglie" />
+    <img class="image-hero" src="http://www.beerstrot.it/asset/img/large/cena-san-martino-2016.jpg" alt="Cena di San Martino Hamburger con Funghi" />
     <div class="row">
         <article>
             <aside class="medium-5 large-4 columns">
