--- a/asporto/index.html
+++ b/asporto/index.html
@@ -72,7 +72,7 @@
     </header>
     <div id="menupage-text"> 
         <div class="row">
-            <div class="large-12 medium-12 small-12 columns panel-menu-2n">
+            <div class="large-12 medium-12 small-12 columns panel-promotion">
                 <h2 class="subheader">Promozione <br><small>Ogni 1€ di spesa accumuli 1 punto.<br> Al raggiungimento di 100 punti ottieni 20€ di sconto sugli asporti successivi. <br>La promozione è valida fino al 31 Gennaio 2017</small></h2>
             </div>
             <div class="large-12 medium-12 small-12 columns">
