--- a/asporto/index.html
+++ b/asporto/index.html
@@ -66,7 +66,7 @@
             <h1>Asporto</h1>
             <hr>
             <h4>Dal Giovedì alla Domenica. Dalle 18:00 alle 20:00<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span></h4>
-            <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
+            <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Chiama</a></span>
             <hr>
         </div>
     </header>
@@ -188,7 +188,7 @@
 <!-- call to action inizio -->
         <div class="row">
             <div class="large-12 medium-12 small-12 columns">
-                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-button"><i class="fi-telephone"></i> Prenota</a></span>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-button"><i class="fi-telephone"></i> Chiama</a></span>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fi-telephone"></i> 071 8853384</a></span>      
             </div>
         </div>
