--- a/asporto/index1.html
+++ b/asporto/index1.html
@@ -74,14 +74,25 @@
             </div>
         </div>
     </header>
-    <header class="row">
-        <div class="medium-12 large-12 columns">
-            <h1>Asporto</h1>
-            <hr>
-            <h4>Dal Giovedì alla Domenica. Dalle 18:00 alle 20:00<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span></h4>
+    <div class="panel-asporto">
+        <div class="row">
+            <div class="medium-12 large-12 columns">
+                <h1>Asporto</h1>
+            </div>
             <hr>
         </div>
-    </header>
+        <div class="row">
+            <div class="medium-6 large-6 columns">
+                <h4><strong>Promozione Asporto:</strong><br>
+                Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong>.<br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€</strong> di sconto sugli asporti successivi.</h4>
+            </div>
+            <div class="medium-6 large-6 columns">
+                <h4>Dal Giovedì alla Domenica<br> Dalle 18:00 alle 20:00<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span></h4>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Chiama</a></span>
+            </div>
+            <hr>
+        </div>
+    </div>
     <div id="menupage-text">
         <div class="row">
             <div class="large-12 medium-12 small-12 columns">
