--- a/asporto/index.html
+++ b/asporto/index.html
@@ -61,22 +61,52 @@
         </section>
     </nav>
 <!-- fine navbar con hamburger -->
-    <header class="row">
-        <div class="medium-12 large-12 columns">
-            <h1>Asporto</h1>
-            <hr>
-            <h4>Dal Giovedì alla Domenica. Dalle 18:00 alle 20:00<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span></h4>
-            <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Chiama</a></span>
-            <hr>
+    <header class="asporto-hero" itemscope itemtype="http://schema.org/Restaurant">
+        <div class="row">
+            <div class="small-12 columns">
+                <h1 class="text-highlight" itemprop="description">Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong>.<br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€</strong> di sconto sugli asporti successivi.</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="small-12 columns show-for-small-only extra-space clearfix">
+                <a role="button" href="tel:+390718853384" class="button small left extra-space-button"><i class="fi-telephone"></i> Chiama</a>
+                <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.4s35636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker" style="font-size:1rem"></i> Dove Siamo</a>
+            </div>
         </div>
     </header>
-    <div id="menupage-text"> 
+    <div class="panel-asporto">
         <div class="row">
-            <div class="large-12 medium-12 small-12 columns">
-                <h2 class="subheader">Promozione <br><small>Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong>.<br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€</strong> di sconto sugli asporti successivi. <br>La promozione è valida fino al 31 Gennaio 2017</small></h2>
+            <div class="medium-12 large-12 columns">
+                <h1>Asporto</h1>
                 <hr>
             </div>
-       
+            
+        </div>
+        <div class="row">
+            <div class="medium-6 large-6 columns">
+                <h4><strong>Dal Giovedì alla Domenica. Dalle 18:00 alle 20:00</strong></h4>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span>
+            </div>
+            <div class="medium-6 large-6 columns">
+                <span class="show-for-small"><br></span>
+                <h4><strong>Promozione Asporto:</strong><br>
+                Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong>.<br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€</strong> di sconto sugli asporti successivi.<br><br>La promozione è valida fino al 31 Gennaio 2017</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="medium-12 large-12 columns show-for-small">
+                <br>
+                <a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Chiama</a>
+            </div> 
+        </div>
+        <div class="row">
+            <div class="medium-12 large-12 columns">
+                <hr>
+            </div> 
+        </div>
+    </div>
+    <div id="menupage-text">
+        <div class="row">
             <div class="large-12 medium-12 small-12 columns">
                 <h2 class="subheader">Per Stuzzicare</h2>
                 <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">  
