--- a/asporto/index.html
+++ b/asporto/index.html
@@ -64,7 +64,7 @@
     <header class="asporto-hero" itemscope itemtype="http://schema.org/Restaurant">
         <div class="row">
             <div class="small-12 columns">
-                <h1 class="text-highlight" itemprop="description">Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong>.<br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€</strong> di sconto sugli asporti successivi.</h1>
+                <h1 class="text-highlight" itemprop="description">Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong><br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€</strong> di sconto</h1>
             </div>
         </div>
         <div class="row">
