--- a/asporto/index.html
+++ b/asporto/index.html
@@ -84,7 +84,7 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <h4><strong>Dal Giovedì alla Domenica. Dalle 18:00 alle 20:00</strong></h4>
+                <h4>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>18:00</strong> alle <strong>20:00</strong></h4>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span>
             </div>
             <div class="medium-6 large-6 columns">
