--- a/asporto/index.html
+++ b/asporto/index.html
@@ -90,7 +90,7 @@
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
                 <h4><strong>Promozione Asporto:</strong><br>
-                Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong>.<br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€</strong> di sconto sugli asporti successivi.<br><br>La promozione è valida fino al 31 Gennaio 2017</h4>
+                Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong>.<br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€</strong> di sconto sugli asporti successivi.<br><br>La promozione è valida fino al 31 Gennaio 2017.</h4>
             </div>
         </div>
         <div class="row">
