--- a/menu/index.html
+++ b/menu/index.html
@@ -67,7 +67,7 @@
         <div class="medium-12 large-12 columns">
             <h1>Menù</h1>
             <hr>
-            <h4>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span></h4>
+            <h4>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>18:00</strong> alle <strong>20:00</strong><span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span></h4>
             <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
             <hr>
         </div>
