--- a/asporto/index.html
+++ b/asporto/index.html
@@ -64,7 +64,7 @@
     <header class="asporto-hero" itemscope itemtype="http://schema.org/Restaurant">
         <div class="row">
             <div class="small-12 columns">
-                <h1 class="text-highlight" itemprop="description">Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong><br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€</strong> di sconto</h1>
+                <h1 class="text-highlight" itemprop="description">Ogni 1€ di spesa accumuli 1 punto.<br>Al raggiungimento di 100 punti ottieni 20€ di sconto.</h1>
             </div>
         </div>
         <div class="row">
@@ -90,7 +90,7 @@
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
                 <h4><strong>Promozione Asporto:</strong><br>
-                Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong>.<br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€</strong> di sconto sugli asporti successivi.<br><br>La promozione è valida fino al 31 Gennaio 2017.</h4>
+                Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong>.<br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€ di sconto</strong> sugli asporti successivi.<br><br>La promozione è valida fino al 31 Gennaio 2017.</h4>
             </div>
         </div>
         <div class="row">
