--- a/asporto/index.html
+++ b/asporto/index.html
@@ -5,21 +5,21 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
     <title>Beerstrot | Asporto</title>
-    <meta name="description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo. Scopri il Asporto il Menù da Asporto di Caè Vecchia Beerstrot"/>
+    <meta name="description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo. Scopri il Menù da Asporto di Ca' Vecchia Beerstrot."/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2016"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Beerstrot Menù Asporto"/>
-    <meta name="twitter:description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo. Scopri il Asporto il Menù da Asporto di Caè Vecchia Beerstrot"/>
+    <meta name="twitter:description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo. Scopri il Menù da Asporto di Ca' Vecchia Beerstrot."/>
     <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/asporto-background.jpg"/>
     <meta name="twitter:url" content="http://www.beerstrot.it/asporto/"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it/asporto/"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Beerstrot Menù Asporto"/>
-    <meta property="og:description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo. Scopri il Asporto il Menù da Asporto di Caè Vecchia Beerstrot"/>
+    <meta property="og:description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo. Scopri il Menù da Asporto di Ca' Vecchia Beerstrot."/>
     <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/asporto-background.jpg"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://www.beerstrot.it/asporto/"/>
