--- a/asporto/index.html
+++ b/asporto/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
-    <title>Beerstrot | Asporto</title>
+    <title>Beerstrot | Menù | Asporto</title>
     <meta name="description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo. Scopri il Menù da Asporto di Ca' Vecchia Beerstrot."/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
@@ -89,8 +89,7 @@
             <div class="medium-12 large-12 columns">
                 <h1>Asporto</h1>
                 <hr>
-            </div>
-            
+            </div>     
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
@@ -100,7 +99,7 @@
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
                 <h4><strong>Promozione Asporto:</strong><br>
-                Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong>.<br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€ di sconto</strong> sugli asporti successivi.<br><br>La promozione è valida fino al 31 Gennaio 2017.</h4>
+                Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong>.<br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€ di sconto</strong> sugli asporti successivi.<br>La promozione è valida fino al 31 Gennaio 2017.</h4>
             </div>
         </div>
         <div class="row">
