--- a/menu/index.html
+++ b/menu/index.html
@@ -71,7 +71,7 @@
         </section>
     </nav>
 <!-- fine navbar con hamburger -->
-    <img class="image-hero" src="http://www.beerstrot.it/asset/img/large/menu.jpg" alt="Ca' Vecchia Beerstrot Menù"/>
+    <img class="image-hero" src="http://www.beerstrot.it/asset/img/large/menu.jpg" alt="Ca' Vecchia Beerstrot Hamburger doppio"/>
     <header class="row">
         <div class="medium-12 large-12 columns">
             <h1>Menù</h1>
