--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 medium-push-6 large-push-6 columns">
-                <a role="button" href="http://www.beerstrot.it/menu/"><img src="http://www.beerstrot.it/asset/img/medium/hamburger.jpg" alt="Hamburger" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://www.beerstrot.it/menu/"><img src="http://www.beerstrot.it/asset/img/medium/menu.jpg" alt="Hamburger Doppio" class="extra-space-image-tab-home"></a>
             </div>
             <div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-                <p>Birra artigianale e cibo di altissima qualità. Facciamo gli hamburger più buoni al mondo utilizzando solo carni da animali al pascolo e verdure fresche di stagione.</p>
+                <p>Birra artigianale e cibo di altissima qualità. Facciamo gli hamburger più buoni al mondo utilizzando solo carni di prima scelta e verdure fresche di stagione.</p>
                 <p>Cibi preparati con cura maniacale: dalle materie prime, alla preparazione, alla presentazione.</p>
                 <a itemprop="menu" role="button" href="http://www.beerstrot.it/menu/">Scopri le Delizie &rarr;</a>
             </div>
