--- a/menu/index.html
+++ b/menu/index.html
@@ -11,14 +11,14 @@
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2016"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Beerstrot Menù"/>
+    <meta name="twitter:title" content="Ca' Vecchia Beerstrot Menù"/>
     <meta name="twitter:description" content="Riscopri i sapori con il nostro menu. Birre artigianali e piatti di alta cucina per tutti."/>
     <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/memu.jpg"/>
     <meta name="twitter:url" content="http://www.beerstrot.it/memu/"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it/menu/"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Menù"/>
+    <meta property="og:title" content="Ca' Vecchia Beerstrot Menù"/>
     <meta property="og:description" content="Riscopri i sapori con il nostro menu. Birre artigianali e piatti di alta cucina per tutti."/>
     <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/menu.jpg"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
