--- a/asporto/index.html
+++ b/asporto/index.html
@@ -11,14 +11,14 @@
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2016"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Beerstrot Menù Asporto"/>
+    <meta name="twitter:title" content="Ca' Vecchia Beerstrot Asporto"/>
     <meta name="twitter:description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo. Scopri il Menù da Asporto di Ca' Vecchia Beerstrot."/>
     <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/asporto.jpg"/>
     <meta name="twitter:url" content="http://www.beerstrot.it/asporto/"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it/asporto/"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Beerstrot Menù Asporto"/>
+    <meta property="og:title" content="Ca' Vecchia Beerstrot Asporto"/>
     <meta property="og:description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo. Scopri il Menù da Asporto di Ca' Vecchia Beerstrot."/>
     <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/asporto.jpg"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
