--- a/asporto/index.html
+++ b/asporto/index.html
@@ -71,7 +71,7 @@
         </section>
     </nav>
 <!-- fine navbar con hamburger -->
-    <header class="asporto-hero hide-for-small" itemscope itemtype="http://schema.org/Restaurant">
+    <header class="asporto-hero" itemscope itemtype="http://schema.org/Restaurant">
         <div class="row">
             <div class="small-12 columns">
                 <h1 class="text-highlight" itemprop="description">Ogni 1€ di spesa accumuli 1 punto.<br>Al raggiungimento di 100 punti ottieni 20€ di sconto.</h1>
@@ -84,7 +84,6 @@
             </div>
         </div>
     </header>
-    <img class="image-hero show-for-small-only" src="http://www.beerstrot.it/asset/img/large/asporto.jpg" alt="Ca' Vecchia Beerstrot Asporto"/>
     <div class="panel-asporto">
         <div class="row">
             <div class="medium-12 large-12 columns">
