--- a/asporto/index.html
+++ b/asporto/index.html
@@ -99,12 +99,11 @@
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
                 <h4><strong>Promozione Asporto:</strong><br>
-                Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong>.<br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€ di sconto</strong> sugli asporti successivi.<br>La promozione è valida fino al 31 Gennaio 2017.</h4>
+                Ogni <strong>1€</strong> di spesa accumuli <strong>1 punto</strong>.<br> Al raggiungimento di <strong>100 punti</strong> ottieni <strong>20€ di sconto</strong> sugli asporti successivi.<br><br>La promozione è valida fino al 31 Gennaio 2017.</h4>
             </div>
         </div>
-        <div class="row">
-            <div class="medium-12 large-12 columns show-for-small">
-                <br>
+        <div class="row show-for-small">
+            <div class="medium-12 large-12 columns">
                 <a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Chiama</a>
             </div> 
         </div>
