--- a/asporto/index.html
+++ b/asporto/index.html
@@ -233,7 +233,7 @@
 <!-- call to action fine -->
     </div>
 <!-- inizio footer -->
-    <footer class="panel-prefooter extra-space-footer">
+    <footer class="panel-prefooter">
         <div class="row">
             <div class="large-6 medium-6 columns">
                 <h4 class="subheader">Fai parte della community</h4>
