--- a/asporto/index.html
+++ b/asporto/index.html
@@ -113,121 +113,123 @@
             </div> 
         </div>
     </div>
-    <div id="menupage-text">
-        <div class="row">
-            <div class="large-12 medium-12 small-12 columns">
-                <h2 class="subheader">Per Stuzzicare</h2>
-                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">  
-                    <li>
-                        <h3>Alette di Pollo &emsp; 5,5</h3>    
-                        <p> in salsa piccante</p>
-                    </li>
-                    <li>
-                        <h3>Bocconcini di Pollo &emsp; 5</h3>    
-                        <p>serviti con salsa piccante</p>
-                    </li>
-                    <li>
-                        <h3>Nachos Supreme &emsp; 5</h3>    
-                        <p>tortilla con peperoncini e cheddar</p>
-                    </li>
-                    <li>
-                        <h3>Peperoncini Piccanti &emsp; 4,5</h3>    
-                        <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
-                    </li>
-                    <li>
-                        <h3>Cavoletti di Bruxelles &emsp; 4,5</h3>
-                        <p>brasati alla birra</p>
-                    </li>
-                    <li>
-                        <h3>Fagottini di Verza &emsp; 4,5</h3>
-                        <p>ripieni di zucca</p>
-                    </li>
-                    <li>
-                        <h3>Patate Fritte &emsp; 3,5</h3>    
-                        <p>patate fritte a bastoncini</p>
-                    </li>
-                    <li>
-                        <h3>Zuppa di Stagione &emsp; 5</h3>    
-                        <p>vellutata di zucca</p>
-                    </li>
-                </ul>
+    <div class="tabs-content" id="menupage-text">
+        <section class="content">
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Per Stuzzicare</h2>
+                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">  
+                        <li>
+                            <h3>Alette di Pollo &emsp; 5,5</h3>    
+                            <p> in salsa piccante</p>
+                        </li>
+                        <li>
+                            <h3>Bocconcini di Pollo &emsp; 5</h3>    
+                            <p>serviti con salsa piccante</p>
+                        </li>
+                        <li>
+                            <h3>Nachos Supreme &emsp; 5</h3>    
+                            <p>tortilla con peperoncini e cheddar</p>
+                        </li>
+                        <li>
+                            <h3>Peperoncini Piccanti &emsp; 4,5</h3>    
+                            <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
+                        </li>
+                        <li>
+                            <h3>Cavoletti di Bruxelles &emsp; 4,5</h3>
+                            <p>brasati alla birra</p>
+                        </li>
+                        <li>
+                            <h3>Fagottini di Verza &emsp; 4,5</h3>
+                            <p>ripieni di zucca</p>
+                        </li>
+                        <li>
+                            <h3>Patate Fritte &emsp; 3,5</h3>    
+                            <p>patate fritte a bastoncini</p>
+                        </li>
+                        <li>
+                            <h3>Zuppa di Stagione &emsp; 5</h3>    
+                            <p>vellutata di zucca</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="large-12 medium-12 small-12 columns">
-                <h2 class="subheader">Hamburger <br><small>Servito con patate fritte. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.</small></h2>
-                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
-                    <li>
-                        <h3>Beerstrot 180 / 360 &emsp; 10,5 / 14,5</h3>    
-                        <p>180 / 360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
-                    </li>
-                    <li>
-                        <h3>New York &emsp; 8,9 / doppio 14,9</h3>    
-                        <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
-                    </li>
-                    <li>
-                        <h3>Diablo &emsp; 8,9 / doppio 14,9</h3>
-                        <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
-                    </li>
-                    <li>
-                        <h3>Deciso &emsp; 8,9 / doppio 14,9</h3> 
-                        <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
-                    </li>
-                    <li>
-                        <h3>Autunno &emsp; 8,9 / doppio 14,9</h3> 
-                        <p>180 grammi di manzo, composta di funghi, panna</p>
-                    </li>
-                    <li>
-                        <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>    
-                        <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
-                    </li>
-                    <li>
-                        <h3>Pulled Pork &emsp; 8,9</h3>    
-                        <p>spalla di maiale sfilacciata, coleslow, cetriolini, salsa piccante</p>
-                    </li>
-                    <li>
-                        <h3>Mini Burger &emsp; 6</h3>    
-                        <p>100 grammi di manzo, cheddar</p>
-                    </li>
-                    <li>
-                        <h3>Vegetariano &emsp; 8</h3>    
-                        <p>180 grammi di hamburger di quinoa, rucola, composta di barbabietola rossa, salsa di senape e miele</p>
-                    </li>
-                </ul>                      
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Hamburger <br><small>Servito con patate fritte. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.</small></h2>
+                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Beerstrot 180 / 360 &emsp; 10,5 / 14,5</h3>    
+                            <p>180 / 360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
+                        </li>
+                        <li>
+                            <h3>New York &emsp; 8,9 / doppio 14,9</h3>    
+                            <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
+                        </li>
+                        <li>
+                            <h3>Diablo &emsp; 8,9 / doppio 14,9</h3>
+                            <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
+                        </li>
+                        <li>
+                            <h3>Deciso &emsp; 8,9 / doppio 14,9</h3> 
+                            <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
+                        </li>
+                        <li>
+                            <h3>Autunno &emsp; 8,9 / doppio 14,9</h3> 
+                            <p>180 grammi di manzo, composta di funghi, panna</p>
+                        </li>
+                        <li>
+                            <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>    
+                            <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
+                        </li>
+                        <li>
+                            <h3>Pulled Pork &emsp; 8,9</h3>    
+                            <p>spalla di maiale sfilacciata, coleslow, cetriolini, salsa piccante</p>
+                        </li>
+                        <li>
+                            <h3>Mini Burger &emsp; 6</h3>    
+                            <p>100 grammi di manzo, cheddar</p>
+                        </li>
+                        <li>
+                            <h3>Vegetariano &emsp; 8</h3>    
+                            <p>180 grammi di hamburger di quinoa, rucola, composta di barbabietola rossa, salsa di senape e miele</p>
+                        </li>
+                    </ul>                      
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="large-12 medium-12 small-12 columns">
-                <h2 class="subheader">Carni<br></h2>
-                <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
-                    <li>
-                        <h3>Chili &emsp; 9,5</h3>    
-                        <p>carne e fagioli serviti con polenta <br>leggermente piccante</p>
-                    </li>
-                    <li>
-                        <h3>Costine &emsp; 11,5</h3>    
-                        <p>costine di maiale al forno in salsa barbeque <br>servite con patate fritte</p>
-                    </li>
-                    <li>
-                        <h3>Tagliata di Picanha &emsp; 19</h3>    
-                        <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
-                    </li>
-                    <li>
-                        <h3>Pollo Piccadilly &emsp; 12</h3>    
-                        <p>300 grammi di petto marinato <br>servito con coleslaw</p>
-                    </li>
-                    <li>
-                        <h3>T-Bone Steak &emsp; 4 per etto</h3>    
-                        <p>fiorentina di manzo da 8 a 14 etti.<br>cottura: molto al sangue o al sangue</p>
-                    </li>
-                </ul>                      
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Carni<br></h2>
+                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Chili &emsp; 9,5</h3>    
+                            <p>carne e fagioli serviti con polenta <br>leggermente piccante</p>
+                        </li>
+                        <li>
+                            <h3>Costine &emsp; 11,5</h3>    
+                            <p>costine di maiale al forno in salsa barbeque <br>servite con patate fritte</p>
+                        </li>
+                        <li>
+                            <h3>Tagliata di Picanha &emsp; 19</h3>    
+                            <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
+                        </li>
+                        <li>
+                            <h3>Pollo Piccadilly &emsp; 12</h3>    
+                            <p>300 grammi di petto marinato <br>servito con coleslaw</p>
+                        </li>
+                        <li>
+                            <h3>T-Bone Steak &emsp; 4 per etto</h3>    
+                            <p>fiorentina di manzo da 8 a 14 etti.<br>cottura: molto al sangue o al sangue</p>
+                        </li>
+                    </ul>                      
+                </div>
             </div>
-        </div>
+        </section> 
 <!-- call to action inizio -->
         <div class="row">
             <div class="large-12 medium-12 small-12 columns">
-                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-button"><i class="fi-telephone"></i> Chiama</a></span>
-                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fi-telephone"></i> 071 8853384</a></span>      
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Chiama</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>      
             </div>
         </div>
 <!-- call to action fine -->
