--- a/asporto/index.html
+++ b/asporto/index.html
@@ -114,7 +114,7 @@
         </div>
     </div>
     <div class="tabs-content" id="menupage-text">
-        <section class="content">
+        <section class="content active">
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Per Stuzzicare</h2>
