--- a/menu/index.html
+++ b/menu/index.html
@@ -257,12 +257,12 @@
                             <p>bionda fruttata 5%</p>
                         </li>
                         <li>
-                            <h3>Emiliano Lambrumbrum &emsp;  4 &bull; 6</h3>
-                            <p>ale con mosto di lambrusco 5,2%</p>
+                            <h3>Castelli Palmares &emsp;  4 &bull; 6</h3>
+                            <p>rossa stile inglese 5,6%</p>
                         </li>
                         <li>
-                            <h3>Emiliano Macario Gomez &emsp;  4 &bull; 6</h3>
-                            <p>doppia ipa amara 7,2%</p>
+                            <h3>Emiliano Orzo White &emsp;  4 &bull; 6</h3>
+                            <p>ipa amara 5,5</p>
                         </li>
                         <li>
                             <h3>Gambrinus Helles &emsp;  4 &bull; 6</h3>
@@ -293,36 +293,44 @@
                     <div class="paragraph-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>MC-77 Mild the Gap 33cl &emsp; 5</h3>
-                                <p>4,5% ale scura</p>
+                                <h3>Castelli Caput Mundi 75cl &emsp; 12</h3>
+                                <p>10% ale scura</p>
                             </li>
                             <li>
-                                <h3>MC-77 Ape Regina 33cl &emsp; 6</h3>
-                                <p>6,9%  ale bionda al miele</p>
+                                <h3>MC-77 Mild the Gap 33cl &emsp; 5</h3>
+                                <p>4,5% ale scura</p>
                             </li>
                         </ul>
                     </div>
                     <div class="paragraph-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
+                                <h3>Auer Pilsner 50cl &emsp; 5</h3>
+                                <p>4,9% bionda pils</p>
+                            </li>
+                            <li>
                                 <h3>Gambrinus Pils 50cl &emsp; 6</h3>
                                 <p>4,9% bionda pils</p>
+                            </li>
+                            <li>
+                                <h3>Nicobar IPA 33cl &emsp; 6</h3>
+                                <p>6,4% ipa amara biologica</p>
                             </li>
                             <li>
                                 <h3>Gusswerk Weiss IPA 33cl &emsp; 6</h3>
                                 <p>6,2% weiss amara biologica</p>
                             </li>
                             <li>
-                                <h3>Mullerbraue Oktoberfest 50cl &emsp; 6</h3>
-                                <p>5% hell poco gassata</p>
+                                <h3>Hirsch Weisser 50cl &emsp; 6</h3>
+                                <p>5,2% weisse</p>
                             </li>
                         </ul>
                     </div>
                     <div class="paragraph-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>MC-77 Sofronia 33cl &emsp; 6</h3>
-                                <p>5% blanche all’ibisco</p>
+                                <h3>Irseer Klosterstarkbier 50cl &emsp; 6</h3>
+                                <p>abazzia 7%</p>
                             </li>
                             <li>
                                 <h3>MC-77 San Lorenzo 33cl &emsp; 6</h3>
@@ -336,8 +344,9 @@
                                 <h3>Castelli Calix Niger 33cl &emsp; 6</h3>
                                 <p>7,2% stout</p>
                             </li>
-                            <li><h3>Castelli Caput Mundi 75cl &emsp; 12</h3>
-                                <p>10% ale scura</p>
+                            <li>
+                                <h3>Mariahilfer Shwarze 50cl &emsp; 6</h3>
+                                <p>5,5% nera tedesca</p>
                             </li>
                         </ul>
                     </div>
@@ -351,10 +360,7 @@
                     </div>
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Against The Grain 75cl &emsp; 17</h3>
-                                <p>6,8% acida</p>
-                            </li>
+                            
                             <li>
                                 <h3>Crooked Cranberry 37,5cl &emsp; 15</h3>
                                 <p>4,5% acida</p>
@@ -370,10 +376,6 @@
                             <li>
                                 <h3>Crooked Vielle 37,5cl &emsp; 15</h3>
                                 <p>6,2% acida</p>
-                            </li>
-                            <li>
-                                <h3>Jolly Pumpkin Maracaibo 75cl &emsp; 17</h3>
-                                <p>7,5% acida</p>
                             </li>
                             <li>
                                 <h3>Tall Tale &emsp; 17</h3>
