--- a/menu/index.html
+++ b/menu/index.html
@@ -318,7 +318,7 @@
                             </li>
                             <li>
                                 <h3>Gusswerk Weiss IPA 33cl &emsp; 6</h3>
-                                <p>6,2% weiss amara biologica</p>
+                                <p>6,2% weisse amara biologica</p>
                             </li>
                             <li>
                                 <h3>Hirsch Weisser 50cl &emsp; 6</h3>
