--- a/menu/index.html
+++ b/menu/index.html
@@ -253,35 +253,35 @@
                     <h2 class="subheader">Birre artigianali alla Spina <br><small>Otto spine che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Castelli Italicum &emsp;  4 &bull; 6</h3>
+                            <h3>Castelli Italicum &emsp;  4 / 6</h3>
                             <p>bionda fruttata 5%</p>
                         </li>
                         <li>
-                            <h3>Castelli Palmares &emsp;  4 &bull; 6</h3>
+                            <h3>Castelli Palmares &emsp;  4 / 6</h3>
                             <p>rossa stile inglese 5,6%</p>
                         </li>
                         <li>
-                            <h3>Emiliano Orzo White &emsp;  4 &bull; 6</h3>
+                            <h3>Emiliano Orzo White &emsp;  4 / 6</h3>
                             <p>ipa amara 5,5</p>
                         </li>
                         <li>
-                            <h3>Gambrinus Helles &emsp;  4 &bull; 6</h3>
+                            <h3>Gambrinus Helles &emsp;  4 / 6</h3>
                             <p>hell 4,9%</p>
                         </li>
                         <li>
-                            <h3>MC77 Communication &emsp;  4 &bull; 6</h3>
+                            <h3>MC77 Communication &emsp;  4 / 6</h3>
                             <p>american pale ale 5,6%</p>
                         </li>
                         <li>
-                            <h3>Mukkeller Mazzu de Fiori &emsp;  4 &bull; 6</h3>
+                            <h3>Mukkeller Mazzu de Fiori &emsp;  4 / 6</h3>
                             <p>ipa amara 6,1%</p>
                         </li>
                         <li>
-                            <h3>Mukkeller Marina &emsp;  4 &bull; 6</h3>
+                            <h3>Mukkeller Marina &emsp;  4 / 6</h3>
                             <p>ambrata fruttata e amara 6,4%</p>
                         </li>
                         <li>
-                            <h3>Zotler Dunkel &emsp;  4 &bull; 6</h3>
+                            <h3>Zotler Dunkel &emsp;  4 / 6</h3>
                             <p>rossa stile tedesco 5%</p>
                         </li>
                     </ul>
@@ -394,11 +394,11 @@
                     <h2 class="subheader">Vino in Caraffa</h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Rosso Piceno &emsp;Quarto 2,5 &bull; Litro 6</h3>
+                            <h3>Rosso Piceno &emsp;Quarto 2,5 / Litro 6</h3>
                             <p>tavignano</p>
                         </li>
                         <li>
-                            <h3>Verdicchio &emsp;Quarto 2,5 &bull; Litro 6</h3>
+                            <h3>Verdicchio &emsp;Quarto 2,5 / Litro 6</h3>
                             <p>tavignano</p>
                         </li>
                     </ul>
