--- a/menu/index.html
+++ b/menu/index.html
@@ -261,6 +261,10 @@
                             <p>rossa stile inglese 5,6%</p>
                         </li>
                         <li>
+                            <h3>Castelli Extrema Ratio &emsp;  4 / 6</h3>
+                            <p>doppia ipa amara 7,2%</p>
+                        </li>
+                        <li>
                             <h3>Emiliano Orzo White &emsp;  4 / 6</h3>
                             <p>ipa amara 5,5</p>
                         </li>
@@ -271,10 +275,6 @@
                         <li>
                             <h3>MC77 Communication &emsp;  4 / 6</h3>
                             <p>american pale ale 5,6%</p>
-                        </li>
-                        <li>
-                            <h3>Mukkeller Mazzu de Fiori &emsp;  4 / 6</h3>
-                            <p>ipa amara 6,1%</p>
                         </li>
                         <li>
                             <h3>Mukkeller Marina &emsp;  4 / 6</h3>
