--- a/menu/index.html
+++ b/menu/index.html
@@ -5,21 +5,21 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
     <title>Beerstrot | Menù</title>
-    <meta name="description" content="Riscopri i sapori veri con il nostro menu. Birre artigianali e piatti di alta cucina per tutti."/>
+    <meta name="description" content="Riscopriamo i sapori veri con il menù di Ca' Vecchia Beerstrot. Birre artigianali e piatti di alta cucina per tutti."/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2016"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Ca' Vecchia Beerstrot Menù"/>
-    <meta name="twitter:description" content="Riscopri i sapori veri con il nostro menu. Birre artigianali e piatti di alta cucina per tutti."/>
+    <meta name="twitter:description" content="Riscopriamo i sapori veri con il menù di Ca' Vecchia Beerstrot. Birre artigianali e piatti di alta cucina per tutti."/>
     <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/memu.jpg"/>
     <meta name="twitter:url" content="http://www.beerstrot.it/memu/"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it/menu/"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Ca' Vecchia Beerstrot Menù"/>
-    <meta property="og:description" content="Riscopri i sapori veri con il nostro menu. Birre artigianali e piatti di alta cucina per tutti."/>
+    <meta property="og:description" content="Riscopriamo i sapori veri con il menù di Ca' Vecchia Beerstrot. Birre artigianali e piatti di alta cucina per tutti."/>
     <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/menu.jpg"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://www.beerstrot.it/menu/"/>
@@ -238,7 +238,7 @@
                             </li>
                         </ul>
                         <blockquote>
-                            <p>Compleanni e ricorrenze: forniamo dolci e torte, se portate le vostre il servizio è di 2 € a persona. <br>Accettiamo solo prodotti di pasticceria.</p>
+                            <p>Compleanni e ricorrenze: forniamo dolci e torte, se portate le vostre il servizio è di 2 € a persona. <br>Accettiamo solo prodotti di pasticceria.</p>
                         </blockquote>
                         <br>
                     </div>
